@@ -1,3 +1,9 @@
+2018-09-07  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 43409: Src/exec.c, Src/jobs.c: ensure main shell and newly
+	started subshell are agreed on which process group the latter
+	belongs to.
+
 2018-09-07  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* 43404 (after 43392): Doc/Makefile.in: Fix 'make install'
